padding adjusted on ingredients to diplay fully

--- a/client/src/Components/recipeCard/style.scss
+++ b/client/src/Components/recipeCard/style.scss
@@ -31,6 +31,7 @@
         justify-content: center;
         // margin-left: 50vw;
         align-items: center;
+        padding-bottom: 50px;
     }
 
     &__heroImage{
