search page done

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,13 @@
 .App {
   text-align: center;
+  background-image: url("./assets/background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width:100vw;
+    height: 100vh;
+    position: fixed;
+    bottom: 0;
+    
 }
 
 .App-logo {
