--- a/client/src/Components/recipeImage/style.scss
+++ b/client/src/Components/recipeImage/style.scss
@@ -5,6 +5,9 @@
     opacity: .2;
     // position: fixed;
     border-radius: 0 0 200px 200px;
+    background-size: contain;
+    background-position: center;
+    
 }
 
 .recipe_add-to-shopping-cart{
