--- a/client/src/Components/recipes/style.scss
+++ b/client/src/Components/recipes/style.scss
@@ -9,3 +9,17 @@
     top: 100px;
     border: 2px solid black;
 }
+
+.body{
+    background-image: url("../../assets/background.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    width:100%;
+    height: 100%;
+    position: fixed;
+    top:0;
+    bottom: 0;
+
+
+   
+}
