--- a/client/src/Components/searchPage/style.scss
+++ b/client/src/Components/searchPage/style.scss
@@ -5,3 +5,37 @@
 .submit-btn{
     margin-top: 50px;
 }
+
+.traditional{
+    display: none;
+}
+
+.fancy-checkbox input[type="checkbox"],
+.fancy-checkbox .checked {
+    display: none;
+}
+ 
+.fancy-checkbox input[type="checkbox"]:checked ~ .checked
+{
+    display: inline-block;
+}
+ 
+.fancy-checkbox input[type="checkbox"]:checked ~ .unchecked
+{
+    display: none;
+}
+
+.container{
+    background-image: url("../../assets/background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width:100%;
+    height: 100vh;
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+}
+
+.form{
+    padding-top:50px;
+}
