--- a/client/src/Components/recipes/recipeStyle.scss
+++ b/client/src/Components/recipes/recipeStyle.scss
@@ -12,13 +12,13 @@
 
 .body{
     background-image: url("../../assets/background.jpg");
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
-    width:100%;
-    height: 100%;
-    position: fixed;
-    top:0;
-    bottom: 0;
+    width:100vw;
+    height: 100vh;
+    // position: fixed;
+    // top:0;
+    // bottom: 0;
 
 
    
