--- a/client/src/Components/recipeCard/recipeCardStyle.scss
+++ b/client/src/Components/recipeCard/recipeCardStyle.scss
@@ -40,14 +40,15 @@
         border-radius: 50%;
         position: relative;
         top: -20vh;
-        border: black 2px solid;
-
+        object-fit: cover;
     }
 }
 
 .emotions{
     display: flex;
     justify-content: space-between;
-    width:150px;
-    height: 150px;
+    /* justify-content: space-between; */
+    width: 80px;
+    height: 50px;
+    // justify-content: center;
 }
