--- a/client/src/Components/searchPage/searchPageStyle.scss
+++ b/client/src/Components/searchPage/searchPageStyle.scss
@@ -1,41 +1,38 @@
-.space-between{
-    display: flex;
-    justify-content: space-evenly;
+.space-between {
+  display: flex;
+  justify-content: space-evenly;
 }
-.submit-btn{
-    margin-top: 50px;
+.submit-btn {
+  margin-top: 50px;
 }
 
-.traditional{
-    display: none;
+.traditional {
+  display: none;
 }
 
 .fancy-checkbox input[type="checkbox"],
 .fancy-checkbox .checked {
-    display: none;
-}
- 
-.fancy-checkbox input[type="checkbox"]:checked ~ .checked
-{
-    display: inline-block;
-}
- 
-.fancy-checkbox input[type="checkbox"]:checked ~ .unchecked
-{
-    display: none;
+  display: none;
 }
 
-.container{
-    background-image: url("../../assets/background.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    width:100%;
-    height: 100vh;
-    position: fixed;
-    bottom: 0;
-    text-align: center;
+.fancy-checkbox input[type="checkbox"]:checked ~ .checked {
+  display: inline-block;
 }
 
-.form{
-    padding-top:50px;
+.fancy-checkbox input[type="checkbox"]:checked ~ .unchecked {
+  display: none;
+}
+
+.container {
+  background-image: url("../../assets/background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  width: 100%;
+  min-height: 100vh;
+  text-align: center;
+}
+
+.form {
+  padding-top: 50px;
 }
