--- a/client/src/Components/footer/style.scss
+++ b/client/src/Components/footer/style.scss
@@ -7,11 +7,12 @@
     flex-wrap: wrap;
     list-style-type: none;
     justify-content: space-around;
-    position: fixed;
-    bottom: 0;
+    // position: fixed;
+    // bottom: 0;
     width: 100%;
     z-index: 1;    
     padding: 0;
     margin: 0 auto;
     width: 100%;
+    height: 40px;
 }
