shopping cart display done

--- a/client/src/Components/shoppingCart/shoppingCartStyle.scss
+++ b/client/src/Components/shoppingCart/shoppingCartStyle.scss
@@ -24,3 +24,16 @@
 .royclass {
     background-color: blue;
 }
+
+.shoppingCart{
+    padding-top: 150px;
+}
+
+.label{
+    display: flex;
+    margin-top: 20px;
+}
+
+.std-card{
+    
+}
