--- a/client/src/Components/recipeCard/recipeCardStyle.scss
+++ b/client/src/Components/recipeCard/recipeCardStyle.scss
@@ -33,7 +33,7 @@
         align-items: center;
         padding-bottom: 50px;
         position: relative;
-        top: -20vh;
+        top: -10vh;
     }
 
     &__heroImage{
@@ -53,4 +53,8 @@
     width: 80px;
     height: 50px;
     // justify-content: center;
+}
+
+.recipe-name{
+    padding-top: 40px;
 }
