--- a/client/src/Components/recipes/recipeStyle.scss
+++ b/client/src/Components/recipes/recipeStyle.scss
@@ -15,6 +15,7 @@
   background-repeat: no-repeat;
   width: 100vw;
   height: 100vh;
+  overflow:hidden;
   // position: fixed;
   // top:0;
   // bottom: 0;
