single recipe page being worked on

--- a/client/src/Components/recipeInBook/recipeInBookStyle.scss
+++ b/client/src/Components/recipeInBook/recipeInBookStyle.scss
@@ -29,3 +29,15 @@
 .doNotDisplay{
     display:none;
 }
+
+.ingredient{
+
+    &__heroImage{
+        height: 230px;
+        width:230px;
+        border-radius: 50%;
+        position: relative;
+        // top: -20vh;
+        object-fit: cover;
+    }
+}
