--- a/client/src/Components/recipeInBook/recipeInBookStyle.scss
+++ b/client/src/Components/recipeInBook/recipeInBookStyle.scss
@@ -37,7 +37,7 @@
         width:230px;
         border-radius: 50%;
         position: relative;
-        // top: -20vh;
+        top: -20vh;
         object-fit: cover;
     }
 }
