--- a/client/src/Components/AllRecipes/recipes/recipeStyle.scss
+++ b/client/src/Components/AllRecipes/recipes/recipeStyle.scss
@@ -10,7 +10,7 @@
 }
 
 .body {
-  background-image: url("../../assets/background.jpg");
+  background-image: url("../../../assets/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   width: 100vw;
