--- a/client/src/Components/SingleRecipe/recipeInBook/recipeInBookStyle.scss
+++ b/client/src/Components/SingleRecipe/recipeInBook/recipeInBookStyle.scss
@@ -1,3 +1,7 @@
+*{
+    overflow: hidden;
+    padding-bottom: 2px;
+}
 .ingredient{
     &__Group{
         display: flex;
@@ -32,12 +36,13 @@
 
 .ingredient{
 
-    &__heroImage{
+    &__heroImageRIB{
         height: 230px;
         width:230px;
         border-radius: 50%;
         position: relative;
-        // top: -20vh;
+        top: -23vh;
         object-fit: cover;
     }
 }
+
