search page revised

--- a/client/src/Components/searchPage/searchPageStyle.scss
+++ b/client/src/Components/searchPage/searchPageStyle.scss
@@ -98,3 +98,18 @@
   justify-content: space-evenly;
   height: 80px;
 }
+
+.icon-box{
+  width:1;
+  height: 100px;
+}
+
+.btn{
+  border: none;
+    padding: 10px;
+    background: none;
+}
+
+.img{
+  height: 40px;
+}
