--- a/client/src/Components/shoppingCart/shoppingCartStyle.scss
+++ b/client/src/Components/shoppingCart/shoppingCartStyle.scss
@@ -7,17 +7,17 @@
 .produceClass{
     background-color: green;
     padding: 0px;
-    border-radius: 4px;
-    color: white;
-    margin-bottom:10px;
+    // border-radius: 4px;
+    color:#FDFFFC
+    // margin-bottom:10px;
 
 }
 
 .dryGoodsClass{
     background-color: brown;
     padding: 0px;
-    border-radius: 4px;
-    color: white;
+    // border-radius: 4px;
+    color:#FDFFFC
 }
 
 .shoppingCart{
@@ -39,7 +39,7 @@
 
 .item_design{
     height: 60px;
-    margin-bottom: 10px;
+    // margin-bottom: 10px;
     display: flex;
     align-items: center;
     // border-radius: 10px;
@@ -52,4 +52,8 @@
     border-radius: 50px;
     width: 70px;
     margin: 5px;
+}
+
+ul{
+    margin:0px;
 }
