shoppinglist parent gradient added

--- a/client/src/Components/shoppingCart/shoppingCartStyle.scss
+++ b/client/src/Components/shoppingCart/shoppingCartStyle.scss
@@ -5,19 +5,22 @@
 }
 
 .produceClass{
-    background-color: green;
+    background-color: rgb(39, 135, 116);
     padding: 0px;
     // border-radius: 4px;
-    color:#FDFFFC
+    color:#FDFFFC;
     // margin-bottom:10px;
+    font-size: 20px;
+    text-align: center;
 
 }
 
 .dryGoodsClass{
-    background-color: brown;
+    background-color: rgb(150, 111, 18);
     padding: 0px;
     // border-radius: 4px;
-    color:#FDFFFC
+    color:#FDFFFC;
+    font-size: 20px;
 }
 
 .shoppingCart{
