trashcan added, icons added for allerfy, logo added

--- a/client/src/Components/RecipeBookComponents/navBarRecipeList/navBarRecipeList.scss
+++ b/client/src/Components/RecipeBookComponents/navBarRecipeList/navBarRecipeList.scss
@@ -8,8 +8,13 @@
     top: 15px;
     width: 100%;
     padding: 10px;
+    height:100px;
 }
 
 .navIcon{
     height: 50px;
+}
+
+.logo{
+    width: 200px;
 }
