--- a/client/src/Components/searchPageC/searchPage/searchPageStyle.scss
+++ b/client/src/Components/searchPageC/searchPage/searchPageStyle.scss
@@ -30,7 +30,7 @@
 }
 
 .container {
-  background-image: url("../../assets/background.jpg");
+  background-image: url("../../../assets/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
@@ -40,7 +40,7 @@
 }
 
 .form {
-  padding-top: 150px;
+  padding-top: 100px;
 }
 
 .searchbar{
