--- a/client/src/Components/RecipeBookComponents/navBarRecipeList/navBarRecipeList.scss
+++ b/client/src/Components/RecipeBookComponents/navBarRecipeList/navBarRecipeList.scss
@@ -1,4 +1,4 @@
-.navBar{
+.navBarSR{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -9,7 +9,7 @@
     width: 100%;
     padding: 10px;
     height:100px;
-    background: rgb(240,244,247);
+    // background: rgb(240,244,247);
 }
 
 .navIcon{
