--- a/client/src/Components/shoppingCart/navBarSC/navBarSC.scss
+++ b/client/src/Components/shoppingCart/navBarSC/navBarSC.scss
@@ -1,4 +1,4 @@
-.navBarR{
+.navBarSC{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -8,7 +8,7 @@
     top: 0px;
     width: 100%;
     padding: 5px;
-    // background: rgb(236,241,244);
+    background: rgb(236,241,244);
 }
 
 .navIcon{
