updated recipe data

--- a/client/src/Components/RecipeBookComponents/recipeBook/recipeBookStyle.scss
+++ b/client/src/Components/RecipeBookComponents/recipeBook/recipeBookStyle.scss
@@ -1,4 +1,9 @@
 .container{
-    padding: 10px;
-    padding-top:100px;
+    // padding: 10px;
+    padding-top:60px;
+}
+
+.recipeBook{
+    overflow: scroll;
+    height: 340px;
 }
