--- a/client/src/Components/RecipeBookComponents/navBarRecipeList/navBarRecipeList.scss
+++ b/client/src/Components/RecipeBookComponents/navBarRecipeList/navBarRecipeList.scss
@@ -3,9 +3,9 @@
     justify-content: space-between;
     align-items: center;
     z-index: 1;
-    position: fixed;
+    // position: fixed;
     left: 0px;
-    top: 15px;
+    // top: 15px;
     width: 100%;
     padding: 10px;
     height:100px;
