--- a/client/src/Components/shoppingCart/shoppingCartStyle.scss
+++ b/client/src/Components/shoppingCart/shoppingCartStyle.scss
@@ -15,7 +15,31 @@
 
 }
 
-.dryGoodsClass{
+.othersClass{
+    background-color: rgb(150, 111, 18);
+    padding: 0px;
+    // border-radius: 4px;
+    color:#FDFFFC;
+    font-size: 20px;
+}
+
+.meatsClass{
+    background-color: rgb(150, 111, 18);
+    padding: 0px;
+    // border-radius: 4px;
+    color:#FDFFFC;
+    font-size: 20px;
+}
+
+.dairyClass{
+    background-color: rgb(150, 111, 18);
+    padding: 0px;
+    // border-radius: 4px;
+    color:#FDFFFC;
+    font-size: 20px;
+}
+
+.nutsClass{
     background-color: rgb(150, 111, 18);
     padding: 0px;
     // border-radius: 4px;
@@ -25,7 +49,7 @@
 
 .shoppingCart{
     padding-top: 100px;
-    height: 550px;
+    height: 525px;
     overflow: scroll;
 }
 
@@ -59,4 +83,8 @@
 
 ul{
     margin:0px;
+}
+
+.scContainer{
+    padding-top: 100px;
 }
