--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
-  background-image: url("./assets/background.jpg");
+  /* background-image: url("./assets/background.jpg"); */
+  background-image: url("./assets/bg2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     width:100vw;
