--- a/client/src/Components/AllRecipes/recipeCard/recipeCardStyle.scss
+++ b/client/src/Components/AllRecipes/recipeCard/recipeCardStyle.scss
@@ -33,7 +33,9 @@
 }
 
 .recipe-name{
-    padding-top: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 2.5em;
 }
 
 .action-items{
@@ -43,12 +45,17 @@
     justify-content: center;
     align-items: center;
 
+    justify-content: space-between;
+    width: 100%;
+    position: fixed;
+
     &-btn{
         width: 100%;
         // padding: 20px;
         height: 72px;
         border: none;
         background: none;
+        display: flex;
     }
 
     &__img{
@@ -59,6 +66,11 @@
 
 .arrow{
     width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.check{
     display: flex;
     justify-content: flex-end;
 }
