shopping cart case lowered to add items together

--- a/client/src/Components/RecipeBookComponents/recipeBook/recipeBookStyle.scss
+++ b/client/src/Components/RecipeBookComponents/recipeBook/recipeBookStyle.scss
@@ -1,9 +1,9 @@
-.container{
+.containerRB{
     // padding: 10px;
     padding-top:60px;
 }
 
 .recipeBook{
     overflow: scroll;
-    height: 340px;
+    height: 370px;
 }
