--- a/client/src/Components/ingredients/ingredientsStyle.scss
+++ b/client/src/Components/ingredients/ingredientsStyle.scss
@@ -19,7 +19,7 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
-        margin-right:20px;
+        margin-right:30px;
 
     }
 
@@ -35,7 +35,7 @@
         opacity: .3;
     }
 
-    &__Image{
+    &__ImageM{
         box-sizing: border-box;
         height: 45px;
         border-radius: 50px;
