cases for delay in api response built in ui

--- a/client/src/Components/AllRecipes/recipes/recipeStyle.scss
+++ b/client/src/Components/AllRecipes/recipes/recipeStyle.scss
@@ -27,3 +27,12 @@
     left: 0px;
     top: 15px;
 }
+
+.rText{
+  padding-top:300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size:2em;
+
+}
