--- a/client/src/Components/shoppingCart/shoppingCartStyle.scss
+++ b/client/src/Components/shoppingCart/shoppingCartStyle.scss
@@ -101,3 +101,11 @@ ul{
 .items{
     font-size: 1.25em;
 }
+
+.scText{
+    padding-top:300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size:2em;
+}
