--- a/client/src/Components/RecipeBookComponents/recipeBook/recipeBookStyle.scss
+++ b/client/src/Components/RecipeBookComponents/recipeBook/recipeBookStyle.scss
@@ -7,3 +7,11 @@
     overflow: scroll;
     height: 370px;
 }
+
+.rbText{
+    padding-top:100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size:2em;
+}
